fixed the about sections test alignment

--- a/style.css
+++ b/style.css
@@ -83,29 +83,28 @@ hr {
 }
 
 
-.about-container{
+.about-container {
   display: flex;
   align-items: center;
   flex-direction: row;
 }
-.about-pete-container{
+.about-pete-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
+}
+.about-pete-container p, .about-pete-container ul, .about-pete-container li {
+  text-align: left !important;
 }
 
 .image-container {
   margin-right: 20px;
-
 }
 
 .portfolio-container {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-
-
-  
 }
 
 
